<resources>
    <string name="app_name">RINSEG</string>
    <string name="logo_subtitle">Gestor de Observaciones</string>
    <string name="sincronizando_datos_titulo">Sincronizando Datos</string>
    <string name="sincronizando_datos_texto">Estamos obteniendo los parámetros de la aplicación.
        Espere por favor.</string>
    <string name="sincronizando_error">No se ha logrado obtener los parámetros, intentelo más
        tarde.</string>
    <string name="sincronizando_ok">Sincronización exitosa.</string>
    <string name="tab_pendientes">Pendientes</string>
    <string name="tab_registrados">Registrados</string>
    <string name="tab_cerrados">Cerrados</string>
    <string name="dialog_title_rop_pendiente_eliminar">Eliminar</string>
    <string name="dialog_body_rop_pendiente_eliminar">Eliminar al rop temporarl</string>
    <string name="dialog_body_rop_pendiente_eliminar_ok">Se eliminó el rop pendiente</string>
    <string name="dialog_body_rop_pendiente_eliminar_error">Ocurrió un error al eliminar el rop
        pendiente</string>
    <string name="dialog_body_rop_pendiente_eliminar_fail_cerrado">No se ha podido eliminar el
        rop porque ya fué cerrado.</string>
    <string name="msg_rop_recuperado_ok">Se recupero el rop con éxito</string>
    <string name="msg_rop_recuperado_fail">Ocurió un error al recuperar el rop</string>
    <string name="usuario_hint">Usuario</string>
    <string name="contraseña_hint">Contraseña</string>
    <string name="login_ingresar">Ingresar</string>
    <string name="msg_servidor_inaccesible">Error de conexión al servidor.</string>
    <string name="msg_login_fail">Credenciales ingresadas no válidas.</string>
    <string name="msg_login_incomplete">Ingresar usuario y contraseña.</string>
    <string name="title_activity_main">RINSEG</string>
    <string name="title_rops">ROP\'s</string>
    <string name="title_rops_pendientes">ROP\'s pendientes</string>
    <string name="title_rops_cerrados">ROP\'s cerrados</string>
    <string name="title_inspecciones">Inspecciones</string>
    <string name="title_inspectores">Inspectores</string>
    <string name="title_responsables">Responsables de área</string>
    <string name="title_nueva_inspeccion">Nueva Inspección</string>
    <string name="title_incidentes">Incidentes</string>
    <string name="title_nuevo_incidente">Nuevo incidente</string>
    <string name="title_rop">ROP</string>
    <string name="title_levantamiento">Levantamiento</string>
    <string name="title_ssma">SSMA</string>
    <string name="title_add_imagen">Adjuntando imágen</string>
    <string name="title_imagen">Imágen y comentario</string>
    <string name="title_galeria">Galería de imágenes</string>
    <string name="title_incident_detail">Detalle de inspección</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_rops_cerrados">ROP\'s cerrados</string>
    <string name="nav_rops_pendientes">ROP\'s pendientes</string>
    <string name="nav_inspecciones">Inspecciones</string>
    <string name="nav_sincronizar">Sincronizar parámetros</string>
    <string name="nav_acerca_de">Acerca de</string>
    <string name="nav_cerrar_sesion">Cerrar Sesión</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_recupera_rop_titulo">Recuperar ROP desde el servidor</string>
    <string name="dialog_recupera_rop_txtcodigo">Código del ROP a recuperar</string>
    <string name="dialog_recupera_rop_btnrecuperar">RECUPERAR</string>
    <string name="dialog_recupera_rop_btncancelar">CANCELAR</string>
    <string name="pendiente_envio">pendiente de envío</string>
    <string name="hint_potencial_perdida">Potencial de pérdida</string>
    <string name="hint_tipo_evento">Tipo de evento</string>
    <string name="hint_blanco">Blanco</string>
    <string name="hint_area_respon">Área responsable</string>
    <string name="hint_lugar_exacto">Lugar exacto del evento</string>
    <string name="hint_empresa">Empresa</string>
    <string name="hint_fecha">Fecha</string>
    <string name="hint_fecha_limite">Fecha límite</string>
    <string name="hint_hora">Hora</string>
    <string name="hint_descr">Descripción</string>
    <string name="btn_cancelar">CANCELAR</string>
    <string name="btn_ccontinuar">CONTINUAR</string>
    <string name="error_lugar_exacto_rp1">ingrese lugar exacto del evento</string>
    <string name="error_fecha_rp1">ingrese fecha del evento</string>
    <string name="error_hora_rp1">ingrese hora del evento</string>
    <string name="error_desc_rp1">ingrese descripción del evento</string>
    <string name="dialog_p1_body">Se perderán los datos ingresados para este ROP</string>
    <string name="hint_acto_condicion_sub">Acto o condición sub estándar</string>
    <string name="hint_acto_sub">Acto sub estándar</string>
    <string name="hint_condicion_sub">Condición sub estándar</string>
    <string name="acto_condicion_sub_default">0 elementos seleccionados</string>
    <string name="acto_condicion_sub_elemento">elemento seleccionado</string>
    <string name="acto_condicion_sub_elementos">elementos seleccionados</string>
    <string name="acciones_preventivas">Acciones preventivas o correctivas inmediatas realizadas:</string>
    <string name="hint_accion_preventiva">Acción preventiva o correctiva</string>
    <string name="hint_responsable">Responsable</string>
    <string name="btn_agreagar">AGREGAR</string>
    <string name="btn_atras">ATRAS</string>
    <string name="msg_lista_acto_subestandar">Agregar por lo menos un acto subestandar</string>
    <string name="msg_lista_acciones">Agregar por lo menos una acción preventiva o correctiva</string>
    <string name="error_resp_rp2">ingrese responsable de acción preventiva o correctiva</string>
    <string name="error_accion_rp2">ingrese acción preventiva o correctiva</string>
    <string name="error_fecha_rp2">ingrese fecha</string>
    <string name="error_nom_rp2">ingrese nombre de supervisor</string>
    <string name="compromisos_trabajador_title">Compromisos del trabajador</string>
    <string name="compromisos_trabajador_body">Yo ________________________ , afirmo haber entendido
        las posibles consecuencias del acto sub estándar que he cometido y me comprometo a
        no incurrir en este tipo de faltas, porque soy sonciente que estas pueden provocar pérdidas
        en perjuicio de mi integridad, la de mis compañeros, el proceso productivo de la empresa o
        el medio ambiente.</string>
    <string name="firma">FIRMA:</string>
    <string name="empresa">EMPRESA:</string>
    <string name="nota">Nota: el observado no está obligado a firmar el presente documento.</string>
    <string name="datos_reportante">DATOS DEL REPORTANTE</string>
    <string name="empresa_rop4">Empresa</string>
    <string name="firma_minuscula">Firma</string>
    <string name="supervisor_a_cargo">SUPERVISOR A CARGO DE LEVANTAR LA OBSERVACIÓN</string>
    <string name="hint_nombre">Nombre</string>
    <string name="requiere_investigacion">¿Requiere investigación y análisis de causas?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="btn_terminar">TERMINAR</string>
    <string name="msg_cerrar_rop_ok">El rop cerrado se envió con éxito.</string>
    <string name="msg_error_guardar_rop">Ocurrió un error al enviar el rop cerrado al servidor
        (se enviará cuando se recupere la conexión a internet).</string>
    <string name="msg_error_cerrar_rop">Ocurrió un error al cerrar el rop.</string>
    <string name="error_supervisor_rp4">ingrese nombre de supervisor</string>
    <string name="label_nompre_rop4">Nombre Supervisor</string>
    <string name="label_empresa_rop4">Empresa</string>
    <string name="msg_confirmar_cerrar_rop">¿Está seguro de terminar el rop?</string>
    <string name="yo">Yo</string>
    <string name="acepto_compromiso">Acepto</string>
    <string name="rop_c1_texto_default">--</string>
    <string name="rop_c1_codigo">Código:</string>
    <string name="rop_c1_aprobado">Aprobado:</string>
    <string name="rop_c1_revision">Revisión:</string>
    <string name="rop_c1_potencial_perdida">Potencial de pérdida:</string>
    <string name="rop_c1_tipo_evento">Tipo de evento:</string>
    <string name="rop_c1_blanco">Blanco:</string>
    <string name="rop_c1_area_resp">Área responsable:</string>
    <string name="rop_c1_lugar_exacto">Lugar exacto del evento:</string>
    <string name="rop_c1_empresa">Empresa:</string>
    <string name="rop_c1_fecha">Fecha:</string>
    <string name="rop_c1_hora">Hora:</string>
    <string name="rop_c1_desc">Descripción:</string>
    <string name="rop_c1_acto_sub">Acto sub estándar:</string>
    <string name="msg_envio_imagen_ok">Se enviaron las imágenes con éxito.</string>
    <string name="msg_error_no_nuevas_imagenes">No hay nuevas imágenes para enviar.</string>
    <string name="rop_c2_acciones_preventivas">Acciones preventivas o creativas inmediatas
        realizadas:</string>
    <string name="rop_c2_compromiso">Compromiso del trabajador:</string>
    <string name="rop_c2_reportante">Reportante:</string>
    <string name="rop_c2_supervisor_a_cargo">Supervisor a cargo de levantar la observación:</string>
    <string name="rop_c2_requiere_investigacion">¿Requiere investigación y análisis de causa?
    </string>
    <string name="insp_nuevo1_lista_inspectores">Lista de inspectores:</string>
    <string name="insp_nuevo1_hint_dni">DNI</string>
    <string name="insp_nuevo1_hint_nombre">Nombre</string>
    <string name="insp_nuevo1_hint_gerencia">Gerencia</string>
    <string name="insp_nuevo1_btn_agregar_inspector">Agregar Inspector</string>
    <string name="error_dni_insp1">ingrese número de DNI</string>
    <string name="error_dni_invalid_insp1">Número de DNI no válido</string>
    <string name="error_area_insp3">ingrese área</string>
    <string name="error_fecha_insp3">ingrese fecha</string>
    <string name="error_empresa_insp3">ingrese empresa inspeccionada</string>
    <string name="error_nombre_insp1">ingrese el nombre del inspector</string>
    <string name="msg_lista_inspectores">Agregar por lo menos un inspector</string>
    <string name="msg_lista_responsable_area">Agregar por lo menos un responsable de área</string>
    <string name="insp_nuevo2_lista_responsables">Lista de responsables:</string>
    <string name="insp_nuevo2_btn_agregar_responsable">Agregar Responsable</string>
    <string name="error_nombre_resp_insp2">ingrese el nombre del responsable</string>
    <string name="dialog_terminar_ssma_titulo">Terminar Inspección</string>
    <string name="dialog_terminar_ssma_confirmacion">¿Está seguro que desea terminar el reporte
        SSMA?</string>
    <string name="inspeccion_detalle1_area">Área:</string>
    <string name="inspeccion_detalle1_tipo_insp">Tipo de inspección:</string>
    <string name="inspeccion_detalle1_empr_insp">Empresa inspeccionada:</string>
    <string name="inspeccion_detalle1_inspectores">Inspectores:</string>
    <string name="inspeccion_detalle1_responsables">Responsables:</string>
    <string name="lev_incidencia_estatus">Estatus</string>
    <string name="cerrar_sesion_titulo">Cerrar Sesión</string>
    <string name="cerrar_sesion_confirmacion">¿Desea salir de la aplicación? \nSe perderá la
        información de formatos pendientes de cierre.</string>
    <string name="btn_cerrar_sesion_salir">SALIR</string>
    <string name="label_fotos">Fotos</string>
    <string name="label_importar_foto">Importar foto</string>
    <string name="label_tomar_foto">Tomar foto</string>
    <string name="label_generar_pdf">Generar PDF</string>
    <string name="card_prev_actions_responsible">Responsable :&#032;</string>
    <string name="card_prev_actions_deadline">Fecha límite : &#032;&#032;&#032;&#032;</string>
</resources>