<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="4dp"
    android:layout_marginStart="4dp"
    android:background="@color/colorWhite"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/linearlayout_card_acciones_registradas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">

        <TextView
            android:id="@+id/text_card_acciones_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lev_incidencia_estatus"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_card_acciones_responsible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_prev_actions_responsible"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/text_card_acciones_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/hint_descr"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/text_card_acciones_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/card_prev_actions_deadline"
            android:textAlignment="textEnd"
            android:textSize="15sp"/>

    </LinearLayout>

</android.support.v7.widget.CardView>
