<com.getbase.floatingactionbutton.FloatingActionsMenu
    android:id="@+id/fab_menu_rop"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    app:fab_addButtonColorNormal="@color/colorAccent"
    app:fab_addButtonColorPressed="@color/colorAccentLight"
    app:rippleColor="@color/colorTertiary"
    app:fab_addButtonPlusIconColor="@color/colorWhite"
    app:fab_expandDirection="up"
    app:fab_labelStyle="@style/menu_labels_style"
    app:fab_labelsPosition="left"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:visibility="gone"
    >

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_generar_pdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fab_colorNormal="@color/colorAccent"
        app:fab_colorPressed="@color/colorAccent"
        app:fab_icon="@drawable/ic_file_pdf"
        app:fab_title="@string/label_generar_pdf"
        app:rippleColor="@color/colorTertiary" />

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_tomar_foto"
        app:fabSize="mini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fab_colorNormal="@color/colorAccent"
        app:fab_colorPressed="@color/colorAccent"
        app:fab_icon="@drawable/ic_camera"
        app:fab_title="@string/label_tomar_foto"
        app:rippleColor="@color/colorTertiary" />

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_import_foto"
        app:fabSize="mini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fab_colorNormal="@color/colorAccent"
        app:fab_colorPressed="@color/colorAccent"
        app:fab_icon="@drawable/ic_import_from_folder"
        app:fab_title="@string/label_importar_foto"
        app:rippleColor="@color/colorTertiary" />

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_set_dir"
        android:layout_width="wrap_content"
        app:fabSize="mini"
        android:layout_height="wrap_content"
        app:fab_colorNormal="@color/colorAccent"
        app:fab_colorPressed="@color/colorAccent"
        app:rippleColor="@color/colorTertiary"
        app:fab_title="@string/label_fotos"
        app:fab_icon="@drawable/ic_multiple_image"
        />





</com.getbase.floatingactionbutton.FloatingActionsMenu>