<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background_dialog"
    android:elevation="13dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"

        >
        <TextView
            android:gravity="center"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_terminar_ssma_titulo"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorPrimary"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorSecondary"
            android:layout_marginBottom="5dp"
            >

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_terminar_ssma_confirmacion"
            android:layout_margin="15dp"
            android:textSize="16dp"
            android:textColor="@color/colorPrimary"
            />
    </LinearLayout>


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="right"
       android:layout_marginRight="6dp"
       >
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/btn_cancelar"
           style="@style/Widget.AppCompat.Button"
           />
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/btn_terminar"
           android:backgroundTint="@color/colorAccent"
           android:textColor="@color/colorWhite"
           style="@style/Widget.AppCompat.Button"
           />
   </LinearLayout>


</LinearLayout>