<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary1"
    android:scrollbars="vertical"
    tools:context="rinseg.asistp.com.ui.fragments.FragmentInspeccionDetalle1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:paddingBottom="80dp"
                android:scrollbars="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:background="@drawable/backgorund_white"
                android:elevation="4dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inspeccion_detalle1_area"
                    android:textColor="@color/colorGray"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/rop_c1_texto_default"
                    android:textColor="@color/colorGray"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rop_c1_fecha"
                        android:textColor="@color/colorGray"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/insp_det_txt_fecha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/rop_c1_texto_default"
                        android:textColor="@color/colorGray"
                        android:textSize="17dp"
                        android:textStyle="bold"

                        />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inspeccion_detalle1_tipo_insp"
                    android:textColor="@color/colorGray"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/rop_c1_texto_default"
                    android:textColor="@color/colorGray"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inspeccion_detalle1_empr_insp"
                    android:textColor="@color/colorGray"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/rop_c1_texto_default"
                    android:textColor="@color/colorGray"
                    android:textSize="17dp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inspeccion_detalle1_inspectores"
                    android:textColor="@color/colorGray"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/rop_c1_texto_default"
                    android:textColor="@color/colorGray"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inspeccion_detalle1_responsables"
                    android:textColor="@color/colorGray"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/rop_c1_texto_default"
                    android:textColor="@color/colorGray"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <include layout="@layout/button_menu_inspeccion_detalle">

    </include>

</FrameLayout>
